# algorithm-identifiers-rs

./: Cargo.toml
src/: lib.rs
